--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    # inspired from https://github.com/orgs/community/discussions/25768#discussioncomment-3249184
+    - id: githubrepository
+      uses: ASzc/change-string-case-action@v1
+      with: 
+        string: ${{ github.repository }}
+
     - name: Login to Packages Container registry
       uses: docker/login-action@v1
       with:
@@ -42,4 +48,4 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: "ghcr.io/${{ github.repository }}:latest"
+        tags: "ghcr.io/${{ steps.githubrepository.outputs.lowercase }}:latest"
